# P2P-File-Share

./: .gitignore  CMakeLists.txt  Doxyfile  README.MD  sample_client_commands.txt
.github/workflows/: generate_docs.yml
docs/: ClientMultithreadingArchitecture_8svg.html  README_8MD.html  TrackerMultithreadingArchitecture_8svg.html  annotated.html  annotated_dup.js  cd_8c.html  cd_8c.js  classConnectionClosedError.html  classConnectionClosedError__coll__graph.map  classConnectionClosedError__inherit__graph.md5  classDownloadManager-members.html  classDownloadManager.html  classDownloadManager.js  classFile-members.html  classFile.html  classFile.js  classFileInfo-members.html  classFileInfo.html  classFileInfo.js  classFilesDB-members.html  classFilesDB.html  classFilesDB.js  classGroup-members.html  classGroup.html  classGroup.js  classGroupDB-members.html  classGroupDB.html  classGroupDB.js  classNetworkError.html  classNetworkError__coll__graph.map  classNetworkError__coll__graph.md5  classNetworkError__inherit__graph.map  classNetworkError__inherit__graph.md5  classPartFile-members.html  classPartFile.html  classPartFile.js  classPeer-members.html  classPeer.html  classPeer.js  classPeerDB-members.html  (+380 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_b.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+51 more)
doxygen/: header.html
src/client/: CMakeLists.txt  client.cpp  downloadmanager.cpp  downloadmanager.hpp  file_id.hpp  file_io.cpp  file_io.hpp  filesdb.cpp  filesdb.hpp  hash.cpp  hash.hpp  partfile.cpp  partfile.hpp  peerdb.cpp  peerdb.hpp  process_input.cpp  process_input.hpp  process_request.cpp  process_request.hpp
src/common/: generate_id.cpp  load_tracker_info.cpp  readme.md
src/models/: endpoint.hpp  file.hpp  fileinfo.hpp  group.hpp  transaction.hpp  user.hpp
src/network/: CMakeLists.txt  network_error.hpp  network_errors.hpp  tcp_server.cpp  tcp_server.hpp  tcp_socket.cpp  tcp_socket.hpp
src/tracker/: CMakeLists.txt  groupdb.cpp  groupdb.hpp  parse_request.cpp  parse_request.hpp  process_request.cpp  process_request.hpp  tracker.cpp  transactionsrecord.cpp  transactionsrecord.hpp  userdb.cpp  userdb.hpp
